--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
                    <!-- logo -->
                    <div class="logo-area">
                       <a href="index.html">
-                      <img class="lazy-load img-fluid" src="img/logo.png" alt="img"/>
+                      <img class="lazy-load img-fluid" src="img/Logo.png" alt="img"/>
                       </a>
                    </div>
                 </div>
